src/test/ui/parser/issue-14303-struct.stderr
error: incorrect parameter order
  --> $DIR/issue-14303-struct.rs:3:9
   |
LL | struct X<'a, T, 'b> {
   |         ^^^^^^^^^^^ help: reorder the parameters: `<'a, 'b, T>`

error: aborting due to previous error

